# binpath

./: .gitignore  meson.build  wscript
src/: binpath.cpp  binpath.hpp
src/linux/: binreloc.c
test/: main.cpp  wscript
